@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/28
+	* Negative aspd rate bonuses will be handled as aspd add rate since the
+	  default non-stackable bonus is useless on penalty bonuses.
+	* Added check to prevent the client from using passive skills. [Skotlex]
 	* Updated sql-files [Playtester]
 	* Removed a missing file reference in the athena-start script
 	* Fixed a #error "<malloc.h> has been replaced by <stdlib.h>" problem
